
message(STATUS " --PIDGAM")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/PIDGAM)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/PIDGAM)

file(GLOB SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB SRC_FILES2 ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
file(GLOB HDR_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)


add_library(PIDGAM SHARED PIDGAM.cpp PIDGAMClassInfo.sinfo.cpp ${HDR_FILES})
target_link_libraries(PIDGAM m dl nsl pthread rt ncurses)
target_link_libraries(PIDGAM BaseLib2 )
